--- a/somnus/locales/de.json
+++ b/somnus/locales/de.json
@@ -1,5 +1,6 @@
 {
   "commands": {
+    "general_error": "Aktion fehlgeschlagen!\n-# ERROR: {e}",
     "ping": {
       "description": "Antwortet mit Pong!",
       "response": "Pong!\n-# Somnus {version}"
@@ -58,13 +59,7 @@
       "placeholder": "Wähle die Welt aus, die du spielen möchtest",
       "response": "Aktuell ist `{current_selected_world}` ausgewählt. Wähle die Welt aus, die du spielen möchtest:",
       "success_offline": "`{selected_value}` wurde erfolgreich ausgewählt!",
-      "success_online": "`{selected_value}` wurde erfolgreich ausgewählt und wird beim nächsten Start gestartet.\nMöchtest du jetzt neustarten?",
-      "error": {
-        "wrong_user": "Du kannst das Menü von Anderen nicht verwenden. Nutze selbst /change_world um die Welt zu ändern.",
-        "general": "Die Welt konnte nicht zu `{selected_value}` gewechselt werden. | {e}"
-      },
-      "restart_now": "Jetzt Neustarten",
-      "cancel": "Abbruch"
+      "success_online": "`{selected_value}` wurde erfolgreich ausgewählt und wird beim nächsten Start gestartet.\nWenn du direkt neustarten möchtest, dann nutze `/restart`."
     },
     "show_worlds": {
       "description": "Zeigt alle verfügbaren Welten an."
@@ -131,11 +126,12 @@
   },
   "status": {
     "text": {
-      "online": "`{world_name}` ({players_online}/{max_players} online)",
-      "starting": "gleich `{world_name}`",
-      "stopping": "nicht mehr `{world_name}`",
-      "offline": "auf /start, um `{world_name}` zu spielen",
-      "only_host_online": "auf /start, um `{world_name}` zu spielen"
+      "online": "Spielt `{world_name}` ({players_online}/{max_players} online)",
+      "starting": "Startet `{world_name}`",
+      "stopping": "Stoppt `{world_name}`",
+      "offline": "/start, um `{world_name}` zu spielen",
+      "only_host_online": "/start, um `{world_name}` zu spielen",
+      "restarting": "Startet neu ..."
     }
   },
   "formatting": {
